<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.toocol.termio</groupId>
    <artifactId>termio</artifactId>
    <version>${revision}</version>
    <name>termio</name>

    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>utilities</module>
        <module>console</module>
        <module>platform</module>
        <module>desktop</module>
        <module>starter</module>
    </modules>

    <properties>
        <revision>0.0.1</revision>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- maven plugin version -->
        <os-maven-plugin.version>1.7.0</os-maven-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
        <flatten-maven-plugin>1.2.7</flatten-maven-plugin>

        <!-- third party dependency -->
        <kotlin.version>1.7.10</kotlin.version>
        <vertx.version>4.2.6</vertx.version>
        <vertx-lang-kotlin-coroutines.version>4.3.3</vertx-lang-kotlin-coroutines.version>
        <jsch.version>0.1.55</jsch.version>
        <jline.version>2.14.2</jline.version>
        <commons.lang3.version>3.12.0</commons.lang3.version>
        <commons.io.version>2.11.0</commons.io.version>
        <commons.codec.version>1.15</commons.codec.version>
        <guava.version>31.1-jre</guava.version>
        <jackson.databind.version>2.12.6.1</jackson.databind.version>
        <protobuf.version>3.19.2</protobuf.version>
        <org.ini4j.version>0.5.4</org.ini4j.version>
        <org.openjfx.controls.version>18.0.1</org.openjfx.controls.version>
        <org.openjfx.fxml.version>18.0.1</org.openjfx.fxml.version>
        <org.openjfx.web.version>18.0.1</org.openjfx.web.version>
        <org.openjfx.swing.version>18.0.1</org.openjfx.swing.version>
        <org.openjfx.packager.version>18.0.1</org.openjfx.packager.version>
        <org.controlsfx.version>11.1.1</org.controlsfx.version>
        <com.dlsc.formsfx.version>11.5.0</com.dlsc.formsfx.version>
        <net.synedra.version>0.3.1</net.synedra.version>
        <org.kordamp.ikonli.version>12.3.1</org.kordamp.ikonli.version>
        <org.kordamp.bootstrapfx.version>0.4.0</org.kordamp.bootstrapfx.version>
        <eu.hansolo.version>17.1.9</eu.hansolo.version>
        <org.fxmisc.richtext.version>0.10.9</org.fxmisc.richtext.version>

        <!-- test dependency -->
        <junit.version>5.9.0</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-core</artifactId>
                <version>${vertx.version}</version>
            </dependency>
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-lang-kotlin-coroutines</artifactId>
                <version>${vertx-lang-kotlin-coroutines.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jcraft</groupId>
                <artifactId>jsch</artifactId>
                <version>${jsch.version}</version>
            </dependency>
            <dependency>
                <groupId>jline</groupId>
                <artifactId>jline</artifactId>
                <version>${jline.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons.lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons.codec.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.databind.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ini4j</groupId>
                <artifactId>ini4j</artifactId>
                <version>${org.ini4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${org.openjfx.controls.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${org.openjfx.fxml.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${org.openjfx.web.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${org.openjfx.swing.version}</version>
            </dependency>
            <dependency>
                <groupId>org.fxmisc.richtext</groupId>
                <artifactId>richtextfx</artifactId>
                <version>${org.fxmisc.richtext.version}</version>
            </dependency>
            <dependency>
                <groupId>org.controlsfx</groupId>
                <artifactId>controlsfx</artifactId>
                <version>${org.controlsfx.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dlsc.formsfx</groupId>
                <artifactId>formsfx-core</artifactId>
                <version>${com.dlsc.formsfx.version}</version>
            </dependency>
            <dependency>
                <groupId>net.synedra</groupId>
                <artifactId>validatorfx</artifactId>
                <version>${net.synedra.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-javafx</artifactId>
                <version>${org.kordamp.ikonli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kordamp.bootstrapfx</groupId>
                <artifactId>bootstrapfx-core</artifactId>
                <version>${org.kordamp.bootstrapfx.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.hansolo</groupId>
                <artifactId>tilesfx</artifactId>
                <version>${eu.hansolo.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit</artifactId>
            <version>${kotlin.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>${os-maven-plugin.version}</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>17</jvmTarget>
                    <args>
                        <arg>-Xjvm-default=all</arg>
                    </args>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <executions>
                    <!-- Replacing default-compile as it is treated specially by maven -->
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <!-- Replacing default-testCompile as it is treated specially by maven -->
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>java-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>java-test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgument>
                        --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED
                    </compilerArgument>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.xolstice.maven.plugins</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>${protobuf-maven-plugin.version}</version>
                <configuration>
                    <protocArtifact>
                        com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                    </protocArtifact>
                    <!-- the directory of proto file -->
                    <protoSourceRoot>${project.basedir}/proto</protoSourceRoot>
                    <!-- the directory of Java file -->
                    <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
                    <clearOutputDirectory>false</clearOutputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>
                                com.toocol.termio.desktop/com.toocol.termio.desktop.bootstrap.TermioCommunityApplication
                            </mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
